# vpic

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .gitmodules_github_absolute  .gitmodules_wdn_relative  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Imake.tmpl  Imakefile  LICENSE.md  Makefile.am  Makefile_bak  README.asds  README.autoconf  README.cell  README.features  README.install  README.md  README.mtrand  README.patches  README.performance  README.porting  README.roadmap  README.subversion  TODO  bugsearch  build.script.in  build_vpic  buildscript.in  configure.ac  configure.in.ac  install  materials  patches.tar
ATTIC/: README.features  README.install  README.mtrand  README.patches  README.performance  README.porting  README.roadmap  gcc-3.3.3p-i386.c  gcc-3.3.3p-i386.md
BUILD_ATTIC/: install
TestScripts/: vpic-build.sh  vpic-test.sh  vpic_strong_scaling.sh  vpic_thread_scaling.sh  vpic_weak_scaling.sh
accelerator/: Makefile.am  accelerator.cxx
arch/: CrayConfig.cmake  autovec-hsw  autovec-knl  catalyst-gcc  cmake-fns.sh  cray-Release-sse  generic-Debug  generic-Debug-sse  generic-RelWithDebInfo  generic-RelWithDebInfo-sse  generic-Release  generic-Release-sse  generic-gcc  generic-gcc-sse  knl-whitebox-RelWithDebInfo-sse  lanl-ats1  lanl-ats1-hsw  lanl-ats1-knl  lanl-cts1  lanl-current-mods  module-fns.sh  non-relativistic  reference-Debug  reference-Release  v16  v16-intel  v4
cell/: Makefile.am
cell/ppe/: Makefile.am  configure.ac  configure.gnu
cell/ppe/accelerator/: Makefile.am
cell/ppe/config/: bootstrap  create_lib_am  lib.am  rules.mk.in
cell/ppe/lib/: Makefile.am
cell/ppe/mprelay/: Makefile.am
cell/ppe/src/simple/: simple.c
cell/spe/: Makefile.am  configure.ac  configure.gnu
cell/spe/config/: bootstrap  rules.mk.in  spe_header_list
cell/spe/src/overlay_manager/: overlay_manager.S
cell/spe/src/particle/: advance_p_pipeline_spu.c
cell/spe/src/root_segment/: root_segment.c  root_segment.ld
cell/spe/src/simple/: seg1.c  seg2.c  simple.c
config/: CrayConfig.cmake  basic.mk  bootstrap  build_utils.py  clean_ac  create_configure_ac  create_lib_am  everything.mk  hacks.cmake  integrated-tests.cmake  lib.am  make_lib_version  make_version  packages.cmake  project.cmake  testboot  testboot.py  utils.mk  vpic_extra_source_list  vpic_header_list  vpic_source_list
deck/: main.cc  wrapper.cc  wrapper.h
doc/: Makefile.am  doxygen.conf.in  mover_bugsearch  tracer.md
doc/src/: hdf5.rst  vpicUnits.tex
lib/: Makefile.am
m4/: ccs_enable_cell.m4  ccs_enable_debug_symbols.m4  ccs_enable_host.m4  ccs_enable_openssl.m4  ccs_enable_profiling.m4  ccs_enable_stripping.m4  ccs_enable_unit_tests.m4  ccs_extra_flags.m4  ccs_flags_gnu_cc.m4  ccs_flags_gnu_cxx.m4  ccs_flags_gnu_pcc.m4  ccs_flags_gnu_pcxx.m4  ccs_flags_gnu_scc.m4  ccs_flags_gnu_scxx.m4  ccs_flags_ibm_pcc.m4  ccs_flags_ibm_scc.m4  ccs_prog_doxygen.m4  ccs_prog_spu_timing.m4  ccs_simd_isa.m4  ccs_tune_cc.m4  ccs_tune_cxx.m4  ccs_tune_pcxx.m4  ccs_tune_scxx.m4  ccs_with_addressing.m4  ccs_with_buildstyle.m4  ccs_with_cell_install.m4  ccs_with_dacs.m4  ccs_with_dacs_launch.m4  ccs_with_fftw.m4  ccs_with_fptype.m4  ccs_with_glut.m4  ccs_with_isa.m4  ccs_with_libmisc_spu.m4  ccs_with_libspe.m4  ccs_with_libspe2.m4  ccs_with_machine.m4  ccs_with_mpi.m4  ccs_with_mpi_fc.m4  ccs_with_ppu_fftw.m4  ccs_with_ppu_mpi.m4  (+10 more)
machine/: aais  ac_debug  ac_test  asds_64  athlon_mp-gcc3.3.3p-mpich  bullock  core2  coyote  coyote64_aais  coyote_debug  coyote_generic  coyote_mpich2  coyote_openmpi  cray_xe6  dacs_relay_hybrid_cell_64  debug-gcc  debug_32  debug_64  desktop  discostu  dummy_mpi  errol  flash32  flash64  flash64_ac  flash64_debug  flash64_openmpi  flash_new  generic  generic-gcc  goodman  goodman.lanl.gov  goodman_debug  intel_64  kraken  laptop  lightning  lobo  mpi_stubs  mpi_stubs_ppu  (+62 more)
mprelay/: Makefile.am  mprelay.cxx
papers/: vpic.bib
patches/: gcc-3.4.5p-i386.c  gcc-3.4.5p-i386.md
sample/: 8preconnection.cxx  Makefile.run.in  NEW_DUMP_EXAMPLE_DECK  SC08_ONE_TRIBLADE_DEMO  beam_plas  (+30 more)
src/util/catalyst/: CMakeLists.txt  VPICAdaptor.cxx  VPICAdaptor.h  vtkVPICContourPipeline.cxx  vtkVPICContourPipeline.h  vtkVPICDataSetPipeline.cxx  vtkVPICDataSetPipeline.h  vtkVPICPipeline.cxx  vtkVPICPipeline.h  vtkVPICPistonContourPipeline.cxx  vtkVPICPistonContourPipeline.h
test/integrated/: CMakeLists.txt  config.py  cyclo.deck  inbndj.deck  interpe.deck  outbndj.deck  pcomm.deck
test/integrated/buffered_particle_dump/: CMakeLists.txt  buffered_particle_dump.deck  readback.py
test/integrated/collision/: CMakeLists.txt  check_col_jx.py  test_collision.deck
test/integrated/energy_comparison/: CMakeLists.txt  weibel.deck
test/integrated/hdf5_fields/: CMakeLists.txt  hdf5_fields.deck  readback.py
test/integrated/hdf5_fields_location/: CMakeLists.txt  hdf5_fields_location.deck  readback.py
test/integrated/hdf5_fields_many_steps/: CMakeLists.txt  hdf5_fields_many_steps.deck  readback.py
test/integrated/hdf5_hydro/: CMakeLists.txt  hdf5_hydro copy.deck  hdf5_hydro.deck  readback.py
test/integrated/legacy/: CMakeLists.txt  accel.deck  cyclo.deck  inbndj.deck  interpe.deck  pcomm.deck  simple.deck
test/integrated/particle_IDs/: CMakeLists.txt  particle_IDs.deck
test/integrated/particle_annotation/: CMakeLists.txt  particle_annotation.deck
test/integrated/particle_push/: CMakeLists.txt  advance_p.h  array_index.deck
test/integrated/to_completion/: CMakeLists.txt  checkpt.1.0  dump.deck  modify_file  reconnection_test.deck  simple.deck
test/integrated/tracer_species/: CMakeLists.txt
test/performance/perform_uncenter/: CMakeLists.txt  uncenter.cpp
test/unit/energy_comparison/: 3d_test.cc  CMakeLists.txt  compare_energies.h  energies_gold  energies_gold.3d_test  energies_gold.3d_test_threaded  weibel_driver.cc
test/unit/grid_heating/: CMakeLists.txt  gridHeatingTest.py  gridHeatingTest1D.cxx  gridHeatingTest2D.cxx  gridHeatingTestElec.cxx  gridHeatingTestElec.py
utilities/: Makefile.am  gtest-vpic.cc  restart_remap.cc  restart_remap.cxx  symbols.h  symbols.hxx
(+1034 files in other folders)
