#------------------------------------------------------------------------------#
# Top-level Makefile.am
#------------------------------------------------------------------------------#

SUBDIRS = lib

#------------------------------------------------------------------------------#
# Unit tests
#------------------------------------------------------------------------------#

tests: all
	cd test; ${MAKE}

check-local: tests
	cd test; ${MAKE} check

clean-local:
	cd test; ${MAKE} clean

#------------------------------------------------------------------------------#
# Create links
#------------------------------------------------------------------------------#

links:
	@(cd ${top_srcdir}/src; [ -d include ] && rm -rf include; \
		mkdir include && cd include; \
		for file in `find .. -type f -regex '.*\.h*x*'` ; do \
			link=`echo $$file`; \
			ln -s $$link .; \
		done \
	)
